# SMDM-dev

./: .gitignore  CONDA.md  README.md  environment.yaml  eval_mdm.sh  evaluate_diff.py  evaluate_fineweb.py  main.py  modifications.md  pyproject.toml  readme.md  run_process_slimpajama.sh  run_train.sh
archived/: evaluate_ar.py  evaluate_gsm8k.py  evaluate_reverse.py
data/mt_bench/reference_answer/: gpt-4o-2024-05-13.jsonl
data/slimpajama/test/chunk1/: example_holdout_0.jsonl.zst  example_holdout_1.jsonl.zst
data/slimpajama/test/chunk2/: example_holdout_0.jsonl.zst  example_holdout_1.jsonl.zst
data/slimpajama/validation/chunk1/: example_holdout_0.jsonl.zst  example_holdout_1.jsonl.zst
data/slimpajama/validation/chunk2/: example_holdout_0.jsonl.zst  example_holdout_1.jsonl.zst
dev_misc/: get_vocab_size.py
eval/: common.py  gen_judgment.py  gen_model_answer.py  show_result.py
lit_gpt/: config.py  diffmodel.py  model_cache.py  rmsnorm.py  speed_monitor.py
pretrain/: train_ar.py  train_mdm.py  train_mdm_rl.py
scripts/: prepare_fineweb.py  prepare_slimpajama_full.py  prepare_slimpajama_sample.py
sft/: finetune_ar.py  finetune_mdm.py  finetune_mdm_gsm8k.py  finetune_mdm_reverse.py  gsm8k_data.py  reverse_data.py  sharegpt_data.py
