[project]
name = "smdm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "flash-attn>=2.8.0.post2",
    "jsonargparse[signatures]>=4.40.0",
    "lightning[extra]>=2.5.1.post0",
    "ninja>=1.11.1.4",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "wandb>=0.20.1",
    "xformers",
    "zstandard>=0.23.0",
]

[tool.uv.sources]
xformers = { git = "https://github.com/facebookresearch/xformers.git" }
